--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,6 @@
   <meta charset="UTF-8">
 
   <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.title }}{% endif %}">
@@ -45,4 +44,6 @@
       {{ page.title }} &mdash; {{ site.title }}
     {% endif %}
   </title>
+
+  <script async src="https://cdn.seline.com/seline.js" data-token="d447fb66ad10b2e"></script>
 </head>
