--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
 
   <meta property="og:site_name" content="{{ site.title }}">
 
-  <link rel="icon" type="image/png" href="data:image/png;base64,iVBORw0KGgo=">
+  <link rel="icon" type="image/png" href="{{ site.baseurl }}/image.jpg">
 
   <link rel="stylesheet" href="{{ site.baseurl }}/styles.css">
 
