--- a/_includes/head.html
+++ b/_includes/head.html
@@ -45,5 +45,5 @@
     {% endif %}
   </title>
 
-  <script async src="https://cdn.seline.com/seline.js" data-token="d447fb66ad10b2e"></script>
+  <script src="https://sln.giacomofolli.com/seline.js" data-api-host="https://sln.giacomofolli.com" async></script>
 </head>
