update to umami

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -45,5 +45,5 @@
     {% endif %}
   </title>
 
-  <script src="https://sln.giacomofolli.com/seline.js" data-api-host="https://sln.giacomofolli.com" async></script>
+  <script defer src="https://umm.giacomofolli.com/script.js" data-website-id="e483bba7-6478-4cd5-864c-f778aadaaed6"></script>
 </head>
