--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -4,15 +4,33 @@ layout: default
 
 <article>
   <div>
-    <h1>{{ page.title }}</h1>
-    <time datetime="{{ page.last_modified_at | date_to_xmlschema }}">{% if page.type != 'pages' %}
-      Last updated on {{ page.last_modified_at | date: "%B %-d, %Y" }}
-      {% endif %}
-    </time>
+    <span class="kicker">{{ page.kicker }}</span>
   </div>
 
   <div id="notes-entry-container">
     <content>
+      <h1>{{ page.title }}</h1>
+
+      <div style="width: 100%; display: flex; justify-content: space-between; align-items: baseline;">
+        <div style="width: fit-content;">
+          <time class="post-datetime" datetime="{{ page.created_at }}">
+            {% if page.type != 'pages'%}
+            Created on {{ page.created_at | date: "%B %-d, %Y" }}
+            {% endif %}
+          </time>
+        </div>
+
+        <div style="width: fit-content;">
+          <time class="post-datetime" datetime="{{ page.last_modified_at | date_to_xmlschema }}">
+            {% if page.type != 'pages'%}
+            Last updated on {{ page.last_modified_at | date: "%B %-d, %Y" }}
+            {% endif %}
+          </time>
+        </div>
+      </div>
+
+      <hr class="title-hr" />
+
       {{ content }}
       <!-- <p>This line appears after every note.</p> -->
     </content>
@@ -21,12 +39,14 @@ layout: default
       <h3 style="margin-bottom: 1em">Notes mentioning this note</h3>
       {% if page.backlinks.size > 0 %}
       <div style="display: grid; grid-gap: 1em; grid-template-columns: repeat(1fr);">
-      {% for backlink in page.backlinks %}
+        {% for backlink in page.backlinks %}
         <div class="backlink-box">
-        <a class="internal-link" href="{{ site.baseurl }}{{ backlink.url }}{%- if site.use_html_extension -%}.html{%- endif -%}">{{ backlink.title }}</a><br>
-        <div style="font-size: 0.9em">{{ backlink.excerpt | strip_html | truncatewords: 20 }}</div>
+          <a class="internal-link"
+            href="{{ site.baseurl }}{{ backlink.url }}{%- if site.use_html_extension -%}.html{%- endif -%}">{{
+            backlink.title }}</a><br>
+          <div style="font-size: 0.9em">{{ backlink.excerpt | strip_html | truncatewords: 20 }}</div>
         </div>
-      {% endfor %}
+        {% endfor %}
       </div>
       {% else %}
 
