--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -1,8 +1,9 @@
-$color-primary: hsl(0, 0%, 10%);
+$color-primary: #fff0d4;
+$color-primary-dark: hsl(0, 0%, 10%);
 $color-text: hsl(0, 0%, 20%);
 $color-subtext: hsl(0, 0%, 30%);
 $color-border: hsl(0, 0%, 85%);
-$color-box-background: mix($color-primary, white, 4%);
+$color-box-background: mix($color-primary-dark, white, 3%);
 $border-radius: 4px;
 $font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
   sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
@@ -15,11 +16,11 @@ body {
   padding: 4vh 6vw;
   overflow-x: hidden;
   color: $color-text;
-  font-size: 1rem;
+  font-size: 0.9rem;
   max-width: 63em;
 
   @media (min-width: 820px) {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
   }
 }
 
@@ -45,11 +46,13 @@ img {
 }
 
 blockquote {
-  padding: 1.5em;
+  padding: 1em 1.2em;
+  font-style: italic;
   margin: 0;
-  font-size: 0.88em;
-  background: $color-box-background;
-  border-radius: $border-radius;
+  font-size: 0.9em;
+  background: mix($color-primary, white, 90%);
+  border-radius: 0;
+  border-left: 5px solid mix($color-primary-dark, white, 70%);
 
   p {
     margin: 0;
@@ -77,17 +80,18 @@ h6 {
 
 a {
   transition: background 300ms;
-  padding: 0 0.1em;
+  padding: 0 0.2em 0 0;
   text-decoration: none;
   border-bottom: 1px solid $color-border;
-  color: $color-primary;
+  color: $color-primary-dark;
   &:hover {
     color: black !important;
-    background: #fffaf1;
+    background: #fff0d4;
   }
   &:after {
     position: relative;
-    top: -0.5em;
+    top: -0.2em;
+    right: -0.3em;
     font-size: 0.7em;
     content: "↗";
     color: #aaaaaa;
@@ -98,6 +102,17 @@ a {
     content: "";
   }
 }
+
+.footnotes ol li {
+  font-size: 0.86em;
+
+  p {
+    margin: 0;
+    padding: 0;  
+  }
+}
+
+
 
 *:focus {
   background: #ffe8bc !important;
@@ -143,4 +158,30 @@ code {
 .invalid-link-brackets {
   color: #ccc;
   cursor: help;
+}
+
+.kicker {
+  opacity: 0.6;
+  margin: 0;
+  font-style: oblique;
+}
+
+.post-datetime {
+  font-size: 0.8em;
+  margin: 0;
+}
+
+.title-hr {
+  margin: 0;
+}
+
+h1 {
+  margin-top: 10px;
+}
+
+.unsplash-mention {
+  margin-top: -10px;
+  font-size: small;
+  width: 100%;
+  text-align: center;
 }
