add event to website

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,8 @@
           <!-- Stuff -->
 
 
-          <div>- website: <a href="https://giacomofolli.com">giacomofolli.com</a></div>
+          <div>- website: <a href="https://giacomofolli.com" id="portfolio-page"
+              data-umami-event="Portforlio link clicked"></a>giacomofolli.com</a></div>
           <div>- based in italy 🇮🇹</div>
           <div>- sports: hike, run, bike and climb</div>
 
