fix broken link

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,7 +19,7 @@
 
 
           <div>- website: <a href="https://giacomofolli.com" id="portfolio-page"
-              data-umami-event="Portforlio link clicked"></a>giacomofolli.com</a></div>
+              data-umami-event="Portforlio link clicked">giacomofolli.com</a></div>
           <div>- based in italy 🇮🇹</div>
           <div>- sports: hike, run, bike and climb</div>
 
