--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -5,23 +5,43 @@ $color-subtext: hsl(0, 0%, 30%);
 $color-border: hsl(0, 0%, 85%);
 $color-box-background: mix($color-primary-dark, white, 3%);
 $border-radius: 4px;
-$font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
-  sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+$font-size: 0.8rem;
+$font-family: "JetBrains Mono", monospace, -apple-system, BlinkMacSystemFont,
+  Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji,
+  Segoe UI Symbol;
+$text-color: #e0e0e0;
+$bg-color: #121313;
+
+@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;600;700&display=swap");
+
+:root {
+  --accent-color: #4a4a4a;
+  --link-color: #ffffff;
+  --border-color: #333;
+  --post-bg: #0a0a0a;
+  --hover-color: #666;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 body {
   box-sizing: content-box;
   font-family: $font-family;
   margin: 0 auto;
-  line-height: 1.7;
-  padding: 4vh 6vw;
+  line-height: 1.6;
+  // padding: 4vh 6vw;
+  padding: 20px;
   overflow-x: hidden;
   color: $color-text;
-  font-size: 0.9rem;
-  max-width: 63em;
-
-  @media (min-width: 820px) {
-    font-size: 1.1rem;
-  }
+  font-size: $font-size;
+  // max-width: 63em;
+  max-width: 1400px;
+  color: $text-color;
+  background-color: $bg-color;
 }
 
 time {
@@ -37,13 +57,13 @@ footer {
   padding-top: 1em;
 }
 
-img {
-  max-width: 100%;
-  display: block;
-  margin: 0 auto;
-  max-height: 75vh;
-  border-radius: $border-radius;
-}
+// img {
+// max-width: 100%;
+// display: block;
+// margin: 0 auto;
+// max-height: 75vh;
+// border-radius: $border-radius;
+// }
 
 blockquote {
   padding: 1em 1.2em;
@@ -108,11 +128,9 @@ a {
 
   p {
     margin: 0;
-    padding: 0;  
+    padding: 0;
   }
 }
-
-
 
 *:focus {
   background: #ffe8bc !important;
